--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@ body{
     overflow-x:hidden;
 }
 
+/* BLUR BACKGROUND */
 #bg{
     position:fixed;
     width:100%;
     height:100%;
-    background-size:cover;
-    background-position:center;
+    background:url('cover.jpg') center/cover no-repeat;
     filter:blur(35px) brightness(40%);
     z-index:-1;
-    transition:0.5s;
 }
 
+/* TOP BANNER */
 .topbar{
     position:fixed;
     top:0;
@@ -49,8 +49,7 @@ body{
     height:200px;
     border-radius:50%;
     margin:20px auto;
-    background-size:cover;
-    background-position:center;
+    background:url('cover.jpg') center/cover no-repeat;
     box-shadow:0 0 30px red;
 }
 
@@ -82,6 +81,7 @@ body{
     cursor:pointer;
 }
 
+/* Equalizer */
 .equalizer{
     display:flex;
     justify-content:center;
@@ -119,7 +119,6 @@ body{
     padding:12px;
     cursor:pointer;
     border-bottom:1px solid #333;
-    transition:0.3s;
 }
 
 .song:hover{
@@ -142,9 +141,9 @@ body{
 
 <div class="container">
 
-<div id="album" class="album"></div>
+<div class="album"></div>
 
-<h2 id="title">Loading...</h2>
+<h2 id="title">Now Playing</h2>
 
 <div class="progress">
 <div id="progressBar" class="progress-bar"></div>
@@ -174,41 +173,33 @@ body{
 var songs=[
 {
 title:"All That I've Got - The Used",
-file:"https://www.dropbox.com/scl/fi/wdu2alcuhrsm8awna1uj1/All-That-I-ve-Got-The-Used-320K.mp3?rlkey=anoeqb74vqikcrmmf8h0lckro&st=lohzn2cb&raw=1",
-cover:"https://i.imgur.com/8Km9tLL.jpg"
+file:"https://www.dropbox.com/scl/fi/wdu2alcuhrsm8awna1uj1/All-That-I-ve-Got-The-Used-320K.mp3?rlkey=anoeqb74vqikcrmmf8h0lckro&st=lohzn2cb&raw=1"
 },
 {
 title:"Alone - Alan Walker",
-file:"https://www.dropbox.com/scl/fi/8zjje4jpmbroy9ogbk8zz/Alone-Alan-Walker-320K.mp3?rlkey=6wnchjft0zw967ckz95fpwd1c&st=xxnfi5c0&raw=1",
-cover:"https://i.imgur.com/8Km9tLL.jpg"
+file:"https://www.dropbox.com/scl/fi/8zjje4jpmbroy9ogbk8zz/Alone-Alan-Walker-320K.mp3?rlkey=6wnchjft0zw967ckz95fpwd1c&st=xxnfi5c0&raw=1"
 },
 {
 title:"Bad Day - Daniel Powter",
-file:"https://www.dropbox.com/scl/fi/13zp82q80ap63jdiv6xuf/Bad-Day-Daniel-Powter-320K.mp3?rlkey=afa5rc15jvlpsu4xzm4vfsspg&st=dp2kax36&raw=1",
-cover:"https://i.imgur.com/8Km9tLL.jpg"
+file:"https://www.dropbox.com/scl/fi/13zp82q80ap63jdiv6xuf/Bad-Day-Daniel-Powter-320K.mp3?rlkey=afa5rc15jvlpsu4xzm4vfsspg&st=dp2kax36&raw=1"
 },
 {
 title:"Californication - RHCP",
-file:"https://www.dropbox.com/scl/fi/l7xgxakinjcv8toepu7a7/Californication-Red-Hot-Chili-Peppers-320K.mp3?rlkey=ynfue8o64bjz2hqd120zt7kv6&st=vs60i2b8&raw=1",
-cover:"https://i.imgur.com/8Km9tLL.jpg"
+file:"https://www.dropbox.com/scl/fi/l7xgxakinjcv8toepu7a7/Californication-Red-Hot-Chili-Peppers-320K.mp3?rlkey=ynfue8o64bjz2hqd120zt7kv6&st=vs60i2b8&raw=1"
 },
 {
 title:"Cancer - My Chemical Romance",
-file:"https://www.dropbox.com/scl/fi/qd9lcvwz06i1kcdwnfi4s/Cancer-My-Chemical-Romance-320K.mp3?rlkey=9hm62cf3mwiawlreulkedr177&st=o5y0lffe&raw=1",
-cover:"https://i.imgur.com/8Km9tLL.jpg"
+file:"https://www.dropbox.com/scl/fi/qd9lcvwz06i1kcdwnfi4s/Cancer-My-Chemical-Romance-320K.mp3?rlkey=9hm62cf3mwiawlreulkedr177&st=o5y0lffe&raw=1"
 },
 {
 title:"Dear God - Avenged Sevenfold",
-file:"https://www.dropbox.com/scl/fi/fputru8ctd70m3ho564px/Dear-God-Avenged-Sevenfold-320K.mp3?rlkey=qm2eeph4ljs1yrxj6r8v7il69&st=gcwxolq1&raw=1",
-cover:"https://i.imgur.com/8Km9tLL.jpg"
+file:"https://www.dropbox.com/scl/fi/fputru8ctd70m3ho564px/Dear-God-Avenged-Sevenfold-320K.mp3?rlkey=qm2eeph4ljs1yrxj6r8v7il69&st=gcwxolq1&raw=1"
 }
 ];
 
 var currentIndex=0;
 var player=document.getElementById("player");
 var title=document.getElementById("title");
-var album=document.getElementById("album");
-var bg=document.getElementById("bg");
 var progressBar=document.getElementById("progressBar");
 var playlistDiv=document.getElementById("playlist");
 
@@ -227,11 +218,8 @@ playlistDiv.appendChild(div);
 }
 
 function playSong(){
-var song=songs[currentIndex];
-player.src=song.file;
-title.innerText=song.title;
-album.style.backgroundImage="url("+song.cover+")";
-bg.style.backgroundImage="url("+song.cover+")";
+player.src=songs[currentIndex].file;
+title.innerText=songs[currentIndex].title;
 player.play();
 updateActive();
 }
@@ -269,7 +257,6 @@ progressBar.style.width=percent+"%";
 player.addEventListener("ended",nextSong);
 
 loadPlaylist();
-playSong();
 </script>
 
 </body>
