--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body{
     position:fixed;
     width:100%;
     height:100%;
-    background:url('cover.jpg') center/cover no-repeat;
+    background:url('https://i.imgur.com/8Km9tLL.jpg') center/cover no-repeat;
     filter:blur(35px) brightness(40%);
     z-index:-1;
 }
@@ -49,7 +49,7 @@ body{
     height:200px;
     border-radius:50%;
     margin:20px auto;
-    background:url('cover.jpg') center/cover no-repeat;
+    background:url('https://i.imgur.com/8Km9tLL.jpg') center/cover no-repeat;
     box-shadow:0 0 30px red;
 }
 
@@ -81,7 +81,6 @@ body{
     cursor:pointer;
 }
 
-/* Equalizer */
 .equalizer{
     display:flex;
     justify-content:center;
