--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@ body{
     font-family:Arial, sans-serif;
     color:white;
     text-align:center;
-    overflow-x:hidden;
 }
 
-/* BLUR BACKGROUND */
+/* BACKGROUND */
 #bg{
     position:fixed;
     width:100%;
     height:100%;
-    background:url('https://i.imgur.com/8Km9tLL.jpg') center/cover no-repeat;
-    filter:blur(35px) brightness(40%);
+    background:url('skull.png') center/cover no-repeat;
+    filter:blur(40px) brightness(40%);
     z-index:-1;
 }
 
-/* TOP BANNER */
+/* TOP BAR */
 .topbar{
     position:fixed;
     top:0;
@@ -32,7 +31,7 @@ body{
     font-size:22px;
     font-weight:bold;
     letter-spacing:5px;
-    background:rgba(0,0,0,0.8);
+    background:rgba(0,0,0,0.85);
     color:red;
     text-shadow:0 0 15px red;
     box-shadow:0 0 20px red;
@@ -45,12 +44,18 @@ body{
 }
 
 .album{
-    width:200px;
-    height:200px;
+    width:220px;
+    height:220px;
     border-radius:50%;
     margin:20px auto;
-    background:url('https://i.imgur.com/8Km9tLL.jpg') center/cover no-repeat;
-    box-shadow:0 0 30px red;
+    background:url('skull.png') center/cover no-repeat;
+    box-shadow:0 0 40px red;
+    animation:pulse 2s infinite alternate;
+}
+
+@keyframes pulse{
+    from{ box-shadow:0 0 20px red; }
+    to{ box-shadow:0 0 50px red; }
 }
 
 .progress{
@@ -81,6 +86,7 @@ body{
     cursor:pointer;
 }
 
+/* Equalizer */
 .equalizer{
     display:flex;
     justify-content:center;
@@ -172,27 +178,27 @@ body{
 var songs=[
 {
 title:"All That I've Got - The Used",
-file:"https://www.dropbox.com/scl/fi/wdu2alcuhrsm8awna1uj1/All-That-I-ve-Got-The-Used-320K.mp3?rlkey=anoeqb74vqikcrmmf8h0lckro&st=lohzn2cb&raw=1"
+file:"https://www.dropbox.com/scl/fi/wdu2alcuhrsm8awna1uj1/All-That-I-ve-Got-The-Used-320K.mp3?rlkey=anoeqb74vqikcrmmf8h0lckro&raw=1"
 },
 {
 title:"Alone - Alan Walker",
-file:"https://www.dropbox.com/scl/fi/8zjje4jpmbroy9ogbk8zz/Alone-Alan-Walker-320K.mp3?rlkey=6wnchjft0zw967ckz95fpwd1c&st=xxnfi5c0&raw=1"
+file:"https://www.dropbox.com/scl/fi/8zjje4jpmbroy9ogbk8zz/Alone-Alan-Walker-320K.mp3?rlkey=6wnchjft0zw967ckz95fpwd1c&raw=1"
 },
 {
 title:"Bad Day - Daniel Powter",
-file:"https://www.dropbox.com/scl/fi/13zp82q80ap63jdiv6xuf/Bad-Day-Daniel-Powter-320K.mp3?rlkey=afa5rc15jvlpsu4xzm4vfsspg&st=dp2kax36&raw=1"
+file:"https://www.dropbox.com/scl/fi/13zp82q80ap63jdiv6xuf/Bad-Day-Daniel-Powter-320K.mp3?rlkey=afa5rc15jvlpsu4xzm4vfsspg&raw=1"
 },
 {
 title:"Californication - RHCP",
-file:"https://www.dropbox.com/scl/fi/l7xgxakinjcv8toepu7a7/Californication-Red-Hot-Chili-Peppers-320K.mp3?rlkey=ynfue8o64bjz2hqd120zt7kv6&st=vs60i2b8&raw=1"
+file:"https://www.dropbox.com/scl/fi/l7xgxakinjcv8toepu7a7/Californication-Red-Hot-Chili-Peppers-320K.mp3?rlkey=ynfue8o64bjz2hqd120zt7kv6&raw=1"
 },
 {
 title:"Cancer - My Chemical Romance",
-file:"https://www.dropbox.com/scl/fi/qd9lcvwz06i1kcdwnfi4s/Cancer-My-Chemical-Romance-320K.mp3?rlkey=9hm62cf3mwiawlreulkedr177&st=o5y0lffe&raw=1"
+file:"https://www.dropbox.com/scl/fi/qd9lcvwz06i1kcdwnfi4s/Cancer-My-Chemical-Romance-320K.mp3?rlkey=9hm62cf3mwiawlreulkedr177&raw=1"
 },
 {
 title:"Dear God - Avenged Sevenfold",
-file:"https://www.dropbox.com/scl/fi/fputru8ctd70m3ho564px/Dear-God-Avenged-Sevenfold-320K.mp3?rlkey=qm2eeph4ljs1yrxj6r8v7il69&st=gcwxolq1&raw=1"
+file:"https://www.dropbox.com/scl/fi/fputru8ctd70m3ho564px/Dear-God-Avenged-Sevenfold-320K.mp3?rlkey=qm2eeph4ljs1yrxj6r8v7il69&raw=1"
 }
 ];
 
@@ -230,13 +236,17 @@ else{player.pause();}
 
 function nextSong(){
 currentIndex++;
-if(currentIndex>=songs.length){currentIndex=0;}
+if(currentIndex>=songs.length){
+currentIndex=0;
+}
 playSong();
 }
 
 function prevSong(){
 currentIndex--;
-if(currentIndex<0){currentIndex=songs.length-1;}
+if(currentIndex<0){
+currentIndex=songs.length-1;
+}
 playSong();
 }
 
@@ -253,7 +263,10 @@ progressBar.style.width=percent+"%";
 }
 });
 
-player.addEventListener("ended",nextSong);
+/* AUTO NEXT */
+player.onended=function(){
+nextSong();
+};
 
 loadPlaylist();
 </script>
