--- a/index.html
+++ b/index.html
@@ -8,36 +8,9 @@
 body{
     margin:0;
     font-family:Arial, sans-serif;
+    background:black;
     color:white;
     text-align:center;
-    background:black;
-    overflow:hidden;
-}
-
-/* SMOKE BACKGROUND */
-#bg{
-    position:fixed;
-    width:100%;
-    height:100%;
-    background:radial-gradient(circle at center, #330000, #000);
-    animation:smoke 8s infinite alternate;
-    z-index:-2;
-}
-
-@keyframes smoke{
-    0%{filter:blur(20px);}
-    100%{filter:blur(60px);}
-}
-
-/* LIGHTNING FLASH */
-.flash{
-    position:fixed;
-    width:100%;
-    height:100%;
-    background:white;
-    opacity:0;
-    pointer-events:none;
-    z-index:-1;
 }
 
 /* TOP BAR */
@@ -47,7 +20,8 @@ body{
     font-weight:bold;
     letter-spacing:5px;
     color:red;
-    text-shadow:0 0 15px red;
+    background:#111;
+    box-shadow:0 0 20px red;
 }
 
 /* ALBUM */
@@ -56,8 +30,23 @@ body{
     height:200px;
     border-radius:50%;
     margin:20px auto;
-    background:url('https://i.imgur.com/3ZQ3Z9S.png') center/cover no-repeat;
-    box-shadow:0 0 40px red;
+    background:radial-gradient(circle, #550000, #000);
+    box-shadow:0 0 30px red;
+}
+
+/* PROGRESS */
+.progress{
+    width:90%;
+    height:6px;
+    background:#333;
+    margin:15px auto;
+    border-radius:5px;
+}
+
+.progress-bar{
+    height:6px;
+    width:0%;
+    background:red;
 }
 
 /* CONTROLS */
@@ -65,31 +54,28 @@ body{
     background:none;
     border:none;
     color:white;
-    font-size:30px;
+    font-size:28px;
     margin:10px;
 }
 
 /* PLAYLIST */
+.playlist{
+    margin-top:20px;
+    border-top:1px solid #333;
+}
+
 .song{
-    padding:10px;
+    padding:12px;
     border-bottom:1px solid #222;
     cursor:pointer;
 }
+
 .song:hover{background:#111;}
 .active{color:red;}
-
-/* CANVAS VISUALIZER */
-canvas{
-    width:100%;
-    height:120px;
-}
 </style>
 </head>
 
 <body>
-
-<div id="bg"></div>
-<div class="flash" id="flash"></div>
 
 <div class="topbar">🎵 BHENZFLIX MUSIC</div>
 
@@ -97,15 +83,17 @@ canvas{
 
 <h3 id="title">Now Playing</h3>
 
+<div class="progress">
+<div id="progressBar" class="progress-bar"></div>
+</div>
+
 <button class="btn" onclick="prevSong()">⏮</button>
 <button class="btn" onclick="togglePlay()">▶</button>
 <button class="btn" onclick="nextSong()">⏭</button>
 
-<canvas id="visualizer"></canvas>
+<div class="playlist" id="playlist"></div>
 
-<div id="playlist"></div>
-
-<audio id="player" crossorigin="anonymous"></audio>
+<audio id="player"></audio>
 
 <script>
 var songs=[
@@ -114,28 +102,46 @@ title:"All That I've Got - The Used",
 file:"https://www.dropbox.com/scl/fi/wdu2alcuhrsm8awna1uj1/All-That-I-ve-Got-The-Used-320K.mp3?raw=1"
 },
 {
+title:"Alone - Alan Walker",
+file:"https://www.dropbox.com/scl/fi/8zjje4jpmbroy9ogbk8zz/Alone-Alan-Walker-320K.mp3?raw=1"
+},
+{
 title:"Bad Day - Daniel Powter",
 file:"https://www.dropbox.com/scl/fi/13zp82q80ap63jdiv6xuf/Bad-Day-Daniel-Powter-320K.mp3?raw=1"
+},
+{
+title:"Californication - RHCP",
+file:"https://www.dropbox.com/scl/fi/l7xgxakinjcv8toepu7a7/Californication-Red-Hot-Chili-Peppers-320K.mp3?raw=1"
+},
+{
+title:"Cancer - My Chemical Romance",
+file:"https://www.dropbox.com/scl/fi/qd9lcvwz06i1kcdwnfi4s/Cancer-My-Chemical-Romance-320K.mp3?raw=1"
+},
+{
+title:"Dear God - Avenged Sevenfold",
+file:"https://www.dropbox.com/scl/fi/fputru8ctd70m3ho564px/Dear-God-Avenged-Sevenfold-320K.mp3?raw=1"
 }
 ];
 
 var currentIndex=0;
 var player=document.getElementById("player");
 var title=document.getElementById("title");
-var playlist=document.getElementById("playlist");
-var flash=document.getElementById("flash");
+var progressBar=document.getElementById("progressBar");
+var playlistDiv=document.getElementById("playlist");
 
-/* PLAYLIST LOAD */
-songs.forEach((song,index)=>{
-let div=document.createElement("div");
+function loadPlaylist(){
+playlistDiv.innerHTML="";
+songs.forEach(function(song,index){
+var div=document.createElement("div");
 div.className="song";
 div.innerText=song.title;
 div.onclick=function(){
 currentIndex=index;
 playSong();
 };
-playlist.appendChild(div);
+playlistDiv.appendChild(div);
 });
+}
 
 function playSong(){
 player.src=songs[currentIndex].file;
@@ -162,53 +168,23 @@ playSong();
 }
 
 function updateActive(){
-document.querySelectorAll(".song").forEach(s=>s.classList.remove("active"));
-document.querySelectorAll(".song")[currentIndex].classList.add("active");
+var items=document.querySelectorAll(".song");
+items.forEach(item=>item.classList.remove("active"));
+items[currentIndex].classList.add("active");
 }
 
-player.onended=function(){nextSong();}
-
-/* REAL VISUALIZER */
-const canvas=document.getElementById("visualizer");
-const ctx=canvas.getContext("2d");
-canvas.width=window.innerWidth;
-canvas.height=120;
-
-const audioCtx=new (window.AudioContext||window.webkitAudioContext)();
-const analyser=audioCtx.createAnalyser();
-const source=audioCtx.createMediaElementSource(player);
-source.connect(analyser);
-analyser.connect(audioCtx.destination);
-analyser.fftSize=256;
-
-const bufferLength=analyser.frequencyBinCount;
-const dataArray=new Uint8Array(bufferLength);
-
-function animate(){
-requestAnimationFrame(animate);
-analyser.getByteFrequencyData(dataArray);
-
-ctx.fillStyle="black";
-ctx.fillRect(0,0,canvas.width,canvas.height);
-
-let barWidth=(canvas.width/bufferLength)*2.5;
-let barHeight;
-let x=0;
-
-for(let i=0;i<bufferLength;i++){
-barHeight=dataArray[i];
-ctx.fillStyle="red";
-ctx.fillRect(x,canvas.height-barHeight/2,barWidth,barHeight/2);
-x+=barWidth+1;
+player.addEventListener("timeupdate",function(){
+if(player.duration){
+var percent=(player.currentTime/player.duration)*100;
+progressBar.style.width=percent+"%";
 }
+});
 
-/* Lightning flash effect */
-if(Math.max(...dataArray)>230){
-flash.style.opacity=0.4;
-setTimeout(()=>flash.style.opacity=0,100);
-}
-}
-animate();
+player.onended=function(){
+nextSong();
+};
+
+loadPlaylist();
 </script>
 
 </body>
