--- a/index.html
+++ b/index.html
@@ -11,16 +11,6 @@ body{
     background:black;
     color:white;
     text-align:center;
-    overflow-x:hidden;
-}
-
-/* BLUR BACKGROUND */
-#bg{
-    position:fixed;
-    width:100%;
-    height:100%;
-    background:linear-gradient(black,#200000);
-    z-index:-1;
 }
 
 /* TOP BAR */
@@ -69,6 +59,14 @@ body{
     margin:10px 20px;
 }
 
+/* CANVAS VISUALIZER */
+canvas{
+    width:100%;
+    height:150px;
+    display:block;
+    margin-top:20px;
+}
+
 /* PLAYLIST */
 .playlist{
     width:90%;
@@ -83,42 +81,10 @@ body{
 .song.active{
     color:red;
 }
-
-/* EQUALIZER */
-.equalizer{
-    display:flex;
-    justify-content:center;
-    align-items:flex-end;
-    height:60px;
-    margin:15px 0;
-}
-
-.bar{
-    width:6px;
-    height:20px;
-    margin:3px;
-    animation:bounce 0.8s infinite ease-in-out;
-    box-shadow:0 0 10px currentColor;
-}
-
-.bar:nth-child(1){ background:#ff0000; }
-.bar:nth-child(2){ background:#ff7300; }
-.bar:nth-child(3){ background:#ffee00; }
-.bar:nth-child(4){ background:#00ff2a; }
-.bar:nth-child(5){ background:#00c3ff; }
-.bar:nth-child(6){ background:#8c00ff; }
-.bar:nth-child(7){ background:#ff00c8; }
-
-@keyframes bounce{
-    0%,100%{height:15px;}
-    50%{height:60px;}
-}
 </style>
 </head>
 
 <body>
-
-<div id="bg"></div>
 
 <div class="topbar">🎵 BHENZFLIX MUSIC</div>
 
@@ -136,19 +102,12 @@ body{
     <button onclick="nextSong()">⏭</button>
 </div>
 
-<div class="equalizer">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-</div>
+<!-- REAL VISUALIZER -->
+<canvas id="visualizer"></canvas>
 
 <div class="playlist" id="playlist"></div>
 
-<audio id="audio"></audio>
+<audio id="audio" crossorigin="anonymous"></audio>
 
 <script>
 const songs = [
@@ -171,15 +130,13 @@ const cover = document.getElementById("cover");
 function loadSong(index){
     audio.src = songs[index].file;
     title.innerText = songs[index].title;
-
-    // random cover every song
     cover.src = "https://picsum.photos/400/400?random=" + Math.random();
-
     highlight();
 }
 
 function playPause(){
     if(audio.paused){
+        audioCtx.resume();
         audio.play();
     } else {
         audio.pause();
@@ -236,6 +193,50 @@ function buildPlaylist(){
 
 buildPlaylist();
 loadSong(current);
+
+/* REAL AUDIO VISUALIZER */
+
+const canvas = document.getElementById("visualizer");
+const ctx = canvas.getContext("2d");
+
+canvas.width = window.innerWidth;
+canvas.height = 150;
+
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+const analyser = audioCtx.createAnalyser();
+const source = audioCtx.createMediaElementSource(audio);
+
+source.connect(analyser);
+analyser.connect(audioCtx.destination);
+
+analyser.fftSize = 128;
+const bufferLength = analyser.frequencyBinCount;
+const dataArray = new Uint8Array(bufferLength);
+
+function animate(){
+    requestAnimationFrame(animate);
+
+    analyser.getByteFrequencyData(dataArray);
+
+    ctx.fillStyle = "black";
+    ctx.fillRect(0,0,canvas.width,canvas.height);
+
+    const barWidth = (canvas.width / bufferLength);
+    let x = 0;
+
+    for(let i=0;i<bufferLength;i++){
+        const barHeight = dataArray[i];
+        const r = barHeight + 25;
+        const g = 250 - barHeight;
+        const b = 150;
+
+        ctx.fillStyle = "rgb("+r+","+g+","+b+")";
+        ctx.fillRect(x, canvas.height - barHeight, barWidth - 2, barHeight);
+        x += barWidth;
+    }
+}
+
+animate();
 </script>
 
 </body>
